--- a/index.html
+++ b/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 
 <body>
+    <audio loop autoplay>
+        <source type="audio/mp3" src="background_music.mp3">
+    </audio>
     <div>
         <div>
             Hi, my name is Ting Yi, Wu. I studied in <i>SongShan</i> senior high school
