--- a/index.html
+++ b/index.html
@@ -2,22 +2,12 @@
 <html lang="en">
 
 <head>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <style>
-        body {
-            background-color: blueviolet;
-        }
-
-        h1 {
-            color: blue;
-            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 
 
@@ -25,26 +15,34 @@
     <audio loop autoplay>
         <source type="audio/mp3" src="background_music.mp3">
     </audio>
-    <div style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; padding: 10px;">
-        <h1 style>Autography</h1>
-        <div style="color:darkblue; padding:10px; border-style:solid">
-            Hi, my name is Ting Yi, Wu. I studied in <i>SongShan</i> senior high school
-            (<a href="https://www.sssh.tp.edu.tw/home">SSSH</a>).
-            And now I major in electrical engineering, in the best university in Taiwan
-            (<a href="https: //web.ee.ntu.edu.tw/">NTUEE</a>).
+    <div style="padding: 10px;">
+        <h1>Autography</h1>
+        <div class="block">
+            <p>
+                Hi, my name is Ting Yi, Wu. I studied in <i>SongShan</i> senior high school
+                (<a href="https://www.sssh.tp.edu.tw/home">SSSH</a>).
+                And now I major in electrical engineering, in the best university in Taiwan
+                (<a href="https: //web.ee.ntu.edu.tw/">NTUEE</a>).
+            </p>
         </div>
-        <div style="padding: 10px; border-style:solid;">
-            I love playing basketball so much and started playing it when
-            I was a junior high school student.
-            I also watched NBA sometimes, and the team I like the most is <i style="color:yellow"><strong>Golden State
-                    Warriors</strong></i>.
-            (<a href="https://www.nba.com/warriors/">GS</a>)
+        <div class="block">
+            <p>
+                I love playing basketball so much and started playing it when
+                I was a junior high school student.
+                I also watched NBA sometimes, and the team I like the most is <i style="color:yellow"><strong>Golden
+                        State Warriors</strong></i>.
+                (<a href="https://www.nba.com/warriors/">GS</a>)
+            </p>
+
         </div>
-        <div style="padding: 10px; border-style:solid;">
-            In addition, I'm a crazy catlover, I surf on Instagram for watching a large number of phots about cats.
-            My aunt even have four cats, they are so adorable that I often visit them and playing with them.
-            Take a look at one of them that I think the cutest one.
-            <img src="cutie.jpg" style="height:600px;width:500px; ">
+        <div class="block">
+            <p>
+                In addition, I'm a crazy catlover, I surf on Instagram for watching a large number of phots about cats.
+                My aunt even have four cats, they are so adorable that I often visit them and playing with them.
+                Take a look at one of them that I think the cutest one.
+                <br><img src="cutie.jpg" style="height:600px;width:500px;">
+            </p>
+
         </div>
     </div>
 
