--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <body style="background-color:rgb(247, 247, 205)">
-    <audio loop autoplay>
+    <audio loop autoplay preload="auto">
         <source type="audio/mp3" src="background_music.mp3">
     </audio>
     <div style="padding: 10px;">
